--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,8 @@ set.seed(0)
 
 > Manage R Configuration at the Command Line
 
+![build status](https://github.com/analythium/rconfig/actions/workflows/check.yml/badge.svg)
+
 Manage R configuration using files (JSON, YAML, separated text)
 JSON strings and command line arguments. Command line arguments
 can be used to override configuration. Period-separated command line
