--- a/README.Rmd
+++ b/README.Rmd
@@ -7,10 +7,11 @@ output:
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>",
+  comment = "#",
   fig.path = "README-"
 )
 set.seed(0)
+knitr::opts_knit$set(root.dir = 'inst/examples')
 ```
 
 # rconfig
@@ -58,24 +59,19 @@ The rconfig package has the following features:
 If you are not yet convinced, here is a quick teaser.
 This is the content of the default configuration file, `rconfig.yml`:
 
-```yaml
-trials: 5
-dataset: "demo-data.csv"
-cores: !expr getOption("mc.cores", 1L)
-user:
-  name: "demo"
+```{r echo=FALSE}
+cat(readLines("rconfig.yml"),sep="\n")
 ```
 
 Let's use a simple R script to print out the configs:
 
-```R
-#!/usr/bin/env Rscript
-str(rconfig::rconfig())
+```{r echo=FALSE}
+cat(readLines("test.R"),sep="\n")
 ```
 
 Now you can override the default configuration using another file, a JSON string, and some other flags. Notice the variable substitution for user name!
 
-```bash
+```{bash}
 export USER=Jane
 
 Rscript --vanilla test.R \
@@ -83,14 +79,6 @@ Rscript --vanilla test.R \
   -j '{"trials":30,"dataset":"full-data.csv"}' \
   --user.name $USER \
   --verbose
-
-# List of 5
-#  $ trials : int 30
-#  $ dataset: chr "full-data.csv"
-#  $ cores  : int 1
-#  $ user   :List of 1
-#   ..$ name: chr "Jane"
-#  $ verbose: logi TRUE
 ```
 
 The package was inspired by the config package, docker-compose/kubectl/caddy and other CLI tools, and was motivated by some real world need when managing background processing on cloud instances.
@@ -101,64 +89,34 @@ The package was inspired by the config package, docker-compose/kubectl/caddy and
 
 Open the project in RStudio or set the work directory to the folder root after cloning/downloading the repo.
 
-```{r eval=FALSE}
-## no default found
+```{r}
 str(rconfig::rconfig())
 
-## use a list override
-str(rconfig::rconfig(list = list(a = 1)))
+str(rconfig::rconfig(
+    file = "rconfig-prod.yml"))
 
-## Try different YAML files
-str(rconfig::rconfig(file = "inst/examples/rconfig.yml"))
-str(rconfig::rconfig(file = "inst/examples/rconfig-prod.yml"))
-
-## prod config overrides the default
-str(rconfig::rconfig(file = c(
-    "inst/examples/rconfig.yml",
-    "inst/examples/rconfig-prod.yml")))
-
-## a list overrides the prod that overrides the default
-str(rconfig::rconfig(file = c(
-    "inst/examples/rconfig.yml",
-    "inst/examples/rconfig-prod.yml"),
+str(rconfig::rconfig(
+    file = c("rconfig.json",
+             "rconfig-prod.txt"),
     list = list(user = list(name = "Jack"))))
 
-## Parse YAML from URL
-str(rconfig::rconfig(file = "https://raw.githubusercontent.com/analythium/docker-compose-shiny-example/main/docker-compose.yml"))
-
-## Use a JSON file
-str(rconfig::rconfig(file = "inst/examples/rconfig.json"))
-str(rconfig::rconfig(file = "inst/examples/rconfig-prod.json"))
-str(rconfig::rconfig(file = c(
-    "inst/examples/rconfig.json",
-    "inst/examples/rconfig-prod.json")))
-
-## Use a text file
-str(rconfig::rconfig(file = "inst/examples/rconfig.txt"))
-str(rconfig::rconfig(file = "inst/examples/rconfig-prod.txt"))
-str(rconfig::rconfig(file = c(
-    "inst/examples/rconfig.txt",
-    "inst/examples/rconfig-prod.txt")))
-
-## Evaluating R expressions (!expr)
-options("rconfig.eval"=FALSE)
-str(rconfig::rconfig(file = "inst/examples/rconfig.yml"))
-str(rconfig::rconfig(file = "inst/examples/rconfig.json"))
-options("rconfig.eval"=NULL)
-str(rconfig::rconfig(file = "inst/examples/rconfig.yml"))
-str(rconfig::rconfig(file = "inst/examples/rconfig.json"))
+str(rconfig::rconfig(
+    file = c("rconfig.json",
+             "rconfig-prod.txt"),
+    list = list(user = list(name = "Jack")),
+    flatten = TRUE))
 ```
 
 Using alongside of the config package:
 
-```{r eval=FALSE}
+```{r}
 conf <- config::get(
     config = "production",
-    file = "inst/examples/config.yml",
+    file = "config.yml",
     use_parent = FALSE)
 
 str(rconfig::rconfig(
-    file = "inst/examples/rconfig.yml",
+    file = "rconfig.yml",
     list = conf))
 ```
 
@@ -166,24 +124,42 @@ str(rconfig::rconfig(
 
 Set the work directory to the `inst/examples` folder cloning/downloading the repo.
 
-```bash
-## Default config if found
+Default config if found:
+
+```{bash}
 Rscript test.R
+```
 
-## Default with debug mode on
+Default with debug mode on:
+
+```{bash}
 R_RCONFIG_DEBUG="FALSE" Rscript test.R
+```
 
-## Change defult config file
+Change defult config file:
+
+```{bash}
 R_RCONFIG_FILE="rconfig-prod.yml" Rscript test.R
+```
 
-## Change defult config file and debug on
+Change defult config file and debug on:
+
+```{bash}
 R_RCONFIG_FILE="rconfig-prod.yml" R_RCONFIG_DEBUG="FALSE" Rscript test.R
+```
 
-## Use file and other props to override default
+Use file and other props to override default:
+
+```{bash}
 Rscript test.R -f rconfig-prod.yml --user.name "unreal_Zh5z*$#="
+```
 
-## Use JSON string and other props to override default
-Rscript test.R -j '{"trials":30,"dataset":"full-data.csv","user":{"name": "real_We4$#z*="}}' --user.name "unreal_Zh5z*$#="
+Use JSON string and other props to override default:
+
+```{bash}
+Rscript test.R \
+  -j '{"trials":30,"dataset":"full-data.csv","user":{"name": "real_We4$#z*="}}' \
+  --user.name "unreal_Zh5z*$#="
 ```
 
 ## License
