Fix README typos

--- a/README.Rmd
+++ b/README.Rmd
@@ -124,25 +124,25 @@ str(rconfig::rconfig(
 
 Set the work directory to the `inst/examples` folder cloning/downloading the repo.
 
-Default config if found:
+Default config if found (the script has debug mode on):
 
 ```{bash}
 Rscript test.R
 ```
 
-Default with debug mode on:
+Default with debug mode off:
 
 ```{bash}
 R_RCONFIG_DEBUG="FALSE" Rscript test.R
 ```
 
-Change defult config file:
+Change default config file:
 
 ```{bash}
 R_RCONFIG_FILE="rconfig-prod.yml" Rscript test.R
 ```
 
-Change defult config file and debug on:
+Change default config file and debug on:
 
 ```{bash}
 R_RCONFIG_FILE="rconfig-prod.yml" R_RCONFIG_DEBUG="FALSE" Rscript test.R
