--- a/README.Rmd
+++ b/README.Rmd
@@ -142,7 +142,7 @@ Change default config file:
 R_RCONFIG_FILE="rconfig-prod.yml" Rscript test.R
 ```
 
-Change default config file and debug on:
+Change default config file and debug off:
 
 ```{bash}
 R_RCONFIG_FILE="rconfig-prod.yml" R_RCONFIG_DEBUG="FALSE" Rscript test.R
