Update version and add RELEASE.R

--- a/README.Rmd
+++ b/README.Rmd
@@ -87,7 +87,7 @@ The package was inspired by the config package, docker-compose/kubectl/caddy and
 
 ### R command line usage
 
-Open the project in RStudio or set the work directory to the folder root after cloning/downloading the repo.
+Open the project in RStudio or set the work directory to the folder root after cloning/downloading the repository.
 
 ```{r}
 str(rconfig::rconfig())
