--- a/README.Rmd
+++ b/README.Rmd
@@ -244,6 +244,15 @@ Rscript commands.R fit
 Rscript commands.R
 ```
 
+Here is how to make the R script executable on Linux (of course you'll need rconfig installed for this to work):
+
+```{bash eval=FALSE}
+sudo cp ./inst/examples/commands.R /usr/local/bin/
+sudo chmod +x /usr/local/bin/commands.R
+```
+
+Make sure that the R script has the 'shebang' (`#!/usr/bin/env Rscript`) as the 1st line, and now can drop the `Rscript` part and use the script as `commands.R model`.
+
 ### Shiny
 
 An example to configure a [Shiny app](https://shiny.rstudio.com/) with command line flags:
