--- a/README.Rmd
+++ b/README.Rmd
@@ -127,7 +127,17 @@ CONFIG <- rconfig::rconfig(
     file = "rconfig-prod.yml")
 
 rconfig::value(CONFIG$cores, 2L)   # set to 1L
-rconfig::value(CONFIG$test, FALSE) # unset
+rconfig::value(CONFIG$test)        # unset
+rconfig::value(CONFIG$test, FALSE) # use default
+```
+
+The default values are used to ensure type safety:
+
+```{r}
+str(rconfig::value(CONFIG$trials, 0L))    # integer
+str(rconfig::value(CONFIG$trials, 0))     # numeric
+str(rconfig::value(CONFIG$trials, "0"))   # character
+str(rconfig::value(CONFIG$trials, FALSE)) # logical
 ```
 
 Using alongside of the config package:
