--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ knitr::opts_knit$set(root.dir = 'inst/examples')
 [![CRAN version](http://www.r-pkg.org/badges/version/rconfig)](https://CRAN.R-project.org/package=rconfig)
 [![CRAN RStudio mirror downloads](http://cranlogs.r-pkg.org/badges/grand-total/rconfig)](https://hub.analythium.io/rconfig/)
 
-Manage R configuration using files (JSON, YAML, separated text)
+Manage R configuration using files (YAML, JSON, INI, TXT)
 JSON strings and command line arguments. Command line arguments
 can be used to override configuration. Period-separated command line
 flags are parsed as hierarchical lists. Environment variables, R global variables,
@@ -69,7 +69,7 @@ The rconfig package provides various ways to override defaults, and instead of c
 The rconfig package has the following features:
 
 - uses default configuration file
-- file based override with the `-f` or `--file` flags (accepts JSON, YAML, and plain text files)
+- file based override with the `-f` or `--file` flags (accepts JSON, YAML, INI, and plain text files)
 - JSON string based override with the `-j` or `--json` flags
 - other command line arguments are merged too, e.g. `--cores 4`
 - heuristic rules are used to coerce command line values to the right type
